# AI-ME-DexaMedica-Training

./: .env.example  FASTAPI_README.md  Makefile  README.md  SPEECH_STREAMING_README.md  chatbot_app.html  fastapi_app.py  function_app.py  main.py  pyproject.toml  requirements.txt  requirements_2.txt  run_fastapi.py  run_streamlit.py  speech_client_example.py  streamlit_app.py  streamlit_stt.py  test.py  upload-docs.py
.github/workflows/: main_kaenova-appservice-testing.yml
docs/: AUDIO_OPTIMIZATION_GUIDE.md  STREAMLIT_README.md  light_api.openapi.json
document-input/: split-and-upload.py
document_upload_cli/: split_and_upload.py  utils.py
fondary_agent/: agent.py  cli-example.py
foundry_agent/: agent.py
hands_off_agent/: agent.py
hands_off_agent/agents/: __init__.py
hands_off_agent/agents/document_agent/: agent.py
hands_off_agent/agents/document_agent/plugins/: ai_search.py  blob.py
hands_off_agent/agents/light_agent/: agent.py
hands_off_agent/agents/orchestrator_agent/: agent.py
multi_agent/: agent.py  common.py
multi_agent/agents/document_agent/: agent.py
multi_agent/agents/light_agent/: agent.py
multi_agent/agents/orchestrator_agent/: agent.py
semantic/: agent.py  history.py  plugins.py  prompt.py
single-agent/: agent.py
single_agent/: agent.py  prompt.py
single_agent/plugins/: lights.py
utils/: history.py  singleton.py  state.py
utils/fastapi/: __init__.py  azure_speech_streaming.py  chatbot_app.html  speech_test.html
utils/fastapi/routes/: __init__.py  agents.py  core.py  documents.py  lights.py  speech.py
utils/streamlit/: README.md  VOICE_STREAMING_README.md  config.py  document.py  session.py  voice.py
utils/streamlit/pages/: agent_page.py  upload_page.py
utils/streamlit/ui/: chat_interface.py  sidebar.py  voice_interface.py
utils/streamlit/voice/: azure_speech_streaming.py  voice.py  webrtc_audio.py
(+1 files in other folders)
