[project]
name = "function-semantic-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.23.0",
    "fastapi>=0.116.1",
    "langchain-text-splitters>=0.3.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "semantic-kernel>=1.35.3",
    "streamlit==1.28.1",
    "uvicorn>=0.35.0",
]
