[project]
name = "function-semantic-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-retry==2.9.1",
    "av>=14.0.0,<15.0.0",
    "azure-ai-documentintelligence==1.0.0b4",
    "azure-cognitiveservices-speech==1.45.0",
    "azure-functions==1.23.0",
    "azure-identity-broker>=1.3.0",
    "azure-search-documents==11.5.3",
    "azure-storage-blob>=12.26.0",
    "fastapi==0.104.1",
    "langchain-text-splitters==0.3.9",
    "pydantic>=2.5.0",
    "pydub==0.25.1",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.6",
    "semantic-kernel==1.35.3",
    "uvicorn==0.24.0",
]
